@@ -4,10 +4,14 @@ include ../../Makefile.inc
 
 DEB_HOST_ARCH_CPU := $(shell dpkg-architecture -qDEB_HOST_ARCH_CPU)
 
-ifeq ($(DEB_HOST_ARCH_CPU),amd64)
+ifeq ($(DEB_HOST_ARCH_CPU),alpha)
+  KERNEL_ARCH_PERF = alpha
+else ifeq ($(DEB_HOST_ARCH_CPU),amd64)
   KERNEL_ARCH_PERF = x86
 else ifeq ($(DEB_HOST_ARCH_CPU),arm)
   KERNEL_ARCH_PERF = arm
+else ifeq ($(DEB_HOST_ARCH_CPU),hppa)
+  KERNEL_ARCH_PERF = parisc
 else ifeq ($(DEB_HOST_ARCH_CPU),i386)
   KERNEL_ARCH_PERF = x86
 else ifeq ($(DEB_HOST_ARCH_CPU),powerpc)
