@@ -2,6 +2,7 @@ linux-tools (3.3-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
   * linux-kbuild: debian/control: Set Multi-Arch: foreign
+  * linux-tools: Build perf on alpha and hppa (Closes: #664834)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 11 Mar 2012 02:08:45 +0000
 
